fix spacing between components in CSS style

--- a/fsg-scores/src/app/app.component.css
+++ b/fsg-scores/src/app/app.component.css
@@ -11,5 +11,9 @@ img {
 }
 
 div.row {
-    margin-bottom: 2rem;
+    margin-top: 3rem;
+}
+
+div.row:last-of-type {
+    margin-bottom: 3rem;
 }
